<resources>
    <string name="app_name">2004projeSon</string>
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="title_activity_login">LOGIN</string>
    <!-- Strings used for fragments for navigation -->
    <string name="previous">Previous
    </string> <string name="login">LOGIN</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="log_in">LOGIN</string>
    <string name="register">register</string>
    <string name="intro_min">The long arrow shows us the minute and it\'s called the minute hand.</string>
    <string name="intro_hour">The short arrow shows us the hour and it\'s called the hour hand.</string>
    <string name="intro_sec">The thin arrow shows us the second and it\'s called the second hand.</string>
    <string name="learn_subtitle">Let\'s Learn First</string>
    <string name="next_button">Next</string>
    <string name="time_title">Time</string>
    <string name="play_subtitle">Now Play</string>
    <string name="back">Back</string>
    <string name="score">Score:</string>
    <string name="check">Check</string>
    <string name="for_hour_hand_all_the_long_lines_on_the_sides_show_you_the_hour_but_as_you_noticed_there_are_only_12_of_them_so_we_divide_them_into_two_groups_after_midnight_am_and_before_midnight_pm">For hour hand, all the long lines on the sides show you the hour. But as you noticed, there are only 12 of them. So we divide them into two groups. After midnight (AM) and before midnight (PM).</string>
    <string name="for_the_minute_hand_all_the_lines_on_the_sides_show_you_the_minute_each_line_represents_1_minute">For the minute hand, all the lines on the sides show you the minute. Each line represents 1 minute.</string>
    <string name="in_the_digital_clock_this_part_shows_the_hour_each_time_the_one_hour_pass_the_number_here_increases_by_one">In the digital clock, this part shows the hour. Each time the one hour pass, the number here increases by one.</string>
    <string name="in_the_digital_clock_this_part_shows_the_minute_each_time_the_one_minute_pass_the_number_here_increases_by_one">In the digital clock, this part shows the minute. Each time the one minute pass, the number here increases by one.</string>
    <string name="if_you_look_closely_you_ll_see_small_marks_or_numbers_around_the_edge_of_the_clock_each_time_the_second_hand_points_to_one_of_those_marks_it_means_one_second_has_gone_by">If you look closely, you\'ll see small marks or numbers around the edge of the clock. Each time the second hand points to one of those marks, it means one second has gone by.</string>
    <string name="choose_the_correct_time_shown_on_the_clock">Choose the correct time shown on the clock.</string>
    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="days_of_the_week">Days of the Week</string>
    <string name="now_let_s_learn_the_days_of_the_week">Now let\'s learn the days of the week!!</string>
    <string name="monday">Monday</string>
    <string name="friday">Friday</string>
    <string name="wednesday">Wednesday</string>
    <string name="saturday">Saturday</string>
    <string name="thursday">Thursday</string>
    <string name="sunday">Sunday</string>
    <string name="tuesday">Tuesday</string>
    <string name="a_week_consists_of_7_days_the_first_5_days_are_called_weekdays_and_the_remaining_2_days_are_called_weekend_days">A week consists of 7 days. The first 5 days are called weekdays and the remaining 2 days are called weekend days.</string>
    <string name="order_of_the_days_of_the_week_is_like_this">Order of the days of the week is like this</string>
    <string name="what_is_the_4th_day_of_the_week">What is the 4th day of the week?</string>
    <string name="what_is_the_2nd_day_of_the_week">What is the 2nd day of the week?</string>
    <string name="what_is_the_7th_day_of_the_week">What is the 7th day of the week?</string>
    <string name="what_is_the_1st_day_of_the_week">What is the 1st day of the week?</string>
    <string name="what_is_the_6th_day_of_the_week">What is the 6th day of the week?</string>
    <string name="what_is_the_3th_day_of_the_week">What is the 3th day of the week?</string>
    <string name="what_is_the_5th_day_of_the_week">What is the 5th day of the week?</string>
    <string name="can_you_put_the_days_in_the_correct_order">Can you put the days in the correct order?</string>
    <string name="now_let_s_learn_the_months_of_the_year">Now let\'s learn the months of the year!!</string>
    <string name="next">Next</string>
    <string name="there_are_12_months_in_a_year_the_year_starts_in_january_and_ends_in_december_the_12_months_are_listed_as_follows">There are 12 months in a year. The year starts in January and ends in December. The 12 months are listed as follows.</string>
    <string name="months_of_the_year">Months of the Year</string>
    <string name="order_of_the_months">Order Of The Months</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="december">December</string>
    <string name="november">November</string>
    <string name="october">October</string>
    <string name="_1st_month">1st Month</string>
    <string name="_2nd_month">2nd Month</string>
    <string name="_3rd_month">3rd Month</string>
    <string name="_4th_month">4th Month</string>
    <string name="_5th_month">5th Month</string>
    <string name="_6th_month">6th Month</string>
    <string name="_7th_month">7th Month</string>
    <string name="_8th_month">8th Month</string>
    <string name="_9th_month">9th Month</string>
    <string name="_10th_month">10th Month</string>
    <string name="_11th_month">11th Month</string>
    <string name="_12th_month">12th Month</string>
    <string name="earth_revolves_around_the_sun_in_365_days_we_divide_these_365_days_into_12_parts_and_call_them_months">Earth revolves around the sun in 365 days. We divide these 365 days into 12 parts and call them months.</string>
    <string name="months_consist_of_30_and_31_days_only_february_contains_28_days">Months consist of 30 and 31 days. Only February contains 28 days.</string>
    <string name="now_let_s_play">Now Let\'s Play</string>
    <string name="_6th_day">6th Day</string>
    <string name="_3rd_day">3rd Day</string>
    <string name="_2dn_day">2dn Day</string>
    <string name="_1st_day">1st Day</string>
    <string name="_4th_day">4th Day</string>
    <string name="_7th_day">7th Day</string>
    <string name="_5th_day">5th Day</string>
    <string name="seasons">Seasons</string>
    <string name="now_let_s_learn_the_seasons_of_the_year">Now let\'s learn the seasons of the year!!</string>
    <string name="there_are_4_seasons_in_a_year_these_are_winter_spring_summer_and_autumn_each_season_has_its_own_characteristics">There are 4 seasons in a year. These are winter, spring, summer and autumn. Each season has its own characteristics.</string>
    <string name="winter">Winter</string>
    <string name="winter_is_the_first_season_of_the_year_it_includes_the_months_of_january_february_and_december_it_is_the_coldest_time_of_the_year_it_usually_snows_in_this_season">Winter is the first season of the year. It includes the months of January, February and December. It is the coldest time of the year.It usually snows in this season.</string>
    <string name="spring">Spring</string>
    <string name="spring_season_is_the_second_season_of_the_year_it_includes_the_months_of_march_april_and_may_it_is_the_time_of_year_when_the_weather_starts_to_warm_up_flowers_begin_to_bloom_in_this_season">Spring season is the second season of the year. It includes the months of March, April and May. It is the time of year when the weather starts to warm up. Flowers begin to bloom in this season.</string>
    <string name="summer">Summer</string>
    <string name="summer_is_the_third_season_of_the_year_it_covers_the_months_of_june_july_and_august_it_is_the_hottest_season_in_this_season_people_usually_go_swimming_and_eat_ice_cream">Summer is the third season of the year. It covers the months of June, July and August. It is the hottest season. In this season, people usually go swimming and eat ice cream.</string>
    <string name="autumn">Autumn</string>
    <string name="autumn_is_the_fourth_season_of_the_year_it_covers_the_months_of_september_october_and_november_it_is_the_season_when_the_weather_starts_to_cool_again_during_this_season_the_leaves_of_the_trees_turn_yellow_and_fall">Autumn is the fourth season of the year. It covers the months of September, October and November. It is the season when the weather starts to cool again. During this season, the leaves of the trees turn yellow and fall.</string>
    <string name="time">TIME</string>
    <string name="math">MATH</string>
    <string name="visual">VISUAL</string>
    <string name="time3">time3</string>
    <string name="time4">time4</string>
    <string name="time5">time5</string>
    <string name="time6">time6</string>
    <string name="math7">math7</string>
    <string name="math8">math8</string>
    <string name="math11">math11</string>
    <string name="visual9">visual9</string>
    <string name="visual10">visual10</string>
    <string name="visual12">visual12</string>
    <string name="visual13">visual13</string>
    <string name="math_learn">LEARN</string>
    <string name="math_play">PLAY</string>
    <string name="welcome">Welcome to the Math Activity! </string>
    <string name="tutorial7">In this activity, you will be shown a number and you need to remember those numbers and enter the correct answer in the input field below. </string>
    <string name="start_button">START </string>
    <string name="try_again"> TRY AGAIN </string>
    <string name="check_button">CHECK </string>
    <string name="enter_your_answer">ENTER YOUR ANSWER</string>
    <string name="skip_button"> SKIP </string>
    <string name="welcome_math_7">Welcome to the Math Activity!</string>
    <string name="well_done">Well done!</string>
    <string name="try_again_toast">You should practice more. Don\'t give up! Please try again.</string>
    <string name="correct_answer">Correct Answer!</string>
    <string name="incorrect_answer">Incorrect answer.</string>
    <string name="invalid_input">Invalid input. Please enter a valid number.</string>
    <string name="great_job">You did a great job!</string>
    <string name="congrats">Congratulations! You did a great job!</string>
    <string name="pls_enter_your_answer">Please enter your answer.</string>
    <string name="tutorial8">In this activity, you will be shown a number and you need to remember those numbers backward manner and  enter the correct answer in the input field below. </string>
    <string name="math_activities">Here is the Math Activities!\n\nPick One and Start!</string>
    <string name="tutorial11">Welcome to Math Game!\n\nIn this game,you will learn multiplication.\n\nPress Start to begin.</string>
    <string name="menu">MENU </string>
    <string name="Congrats">Congrats you found the bee!! </string>
</resources>